# beacon-binary-format

./: Cargo.toml
benches/: benchmark.rs
src/: consts.rs  entry.rs  error.rs  footer.rs  lib.rs  ops.rs  resolver.rs  util.rs
src/array/: arrow.rs  column.rs  compression.rs  datatype.rs  dimensions.rs  element.rs  group.rs  mod.rs  statistics.rs  util.rs
src/index/: mod.rs  pruning.rs
src/object_store/: mod.rs
src/reader/: mod.rs
src/reader/async_reader/: array.rs  cache.rs  mod.rs  stream.rs
src/writer/: mod.rs
src/writer/async_writer/: mod.rs
