[package]
name = "beacon-binary-format"
version = "2.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object_store = "0.12.3"
rkyv = { version = "=0.8.10", features = [
    "bytes-1",
    "pointer_width_64",
    "indexmap-2",
    "smol_str-0_3"
] }
moka = { version = "0.12.10", features = ["future"] }
futures = "0.3.31"
async-trait = "0.1.88"
munge_macro = "=0.4.1"
itertools = "0.14.0"
arrow = { version = "^56.0.0", features = ["prettyprint"] }
arrow-schema = {version = "^56.0.0", features = ["serde"] }
arrow-buffer = { version = "^56.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"  # or `bincode = "1.3"` for binary
byteorder = "1.5.0"
# Utils
indexmap = {version = "2.7", features = ["serde"] }
bytes = "1.10.0"
tokio = { version = "1.47.0", features = ["full"] }
tempfile = "3.19.1"
crossbeam = "0.8.4"
# Error handling
anyhow = "1.0.95"
thiserror = "2.0.12"
# Compression libs
zstd = "0.13.2"
lz4_flex = "0.11.3"
lzzzz = "2.0.0"
parking_lot = "0.12.4"
tracing = "0.1.41"
flume = { version = "0.11.1", "features" = ["async"] }
nd-arrow-array = { git = "https://github.com/maris-development/nd-arrow-array.git", branch = "main", version = "1.3.0"}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "async_tokio"] }
rand = "0.9.0"
tempfile = "3.16.0"

[[bench]]
name = "benchmark"
harness = false